--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,31 +1,35 @@
-- class_name: 友情链接
-  class_desc: 我的朋友们
+- class_name: 前端
+  class_desc: 前端常用的学习，就业等网站
   link_list:
-    - name: 这个爱酱不太聪明
-      link: https://kwydy.cn
-      avatar: https://kwydy.oss-cn-guangzhou.aliyuncs.com/blog/20221104181226.png
-      descr: 我们隔的不是距离而是次元
-    - name: 忘忧 Studio
-      link: https://www.wangyoustudio.cn/
-      avatar: https://riven-cabin.oss-cn-guangzhou.aliyuncs.com/blog/videos/wangyoustudio.jpg
-      descr: 这里记录着我学习生涯的点点滴滴，每一篇文章都是日日夜夜键盘敲打的成果，很高兴你能访问本网站！
-    - name: LuiYang的博客
-      link: https://luiyang08.github.io/
-      avatar: https://vkceyugu.cdn.bspapp.com/VKCEYUGU-6dd07f54-c3ab-447b-87ff-51ff48538c90/bb761f83-0cdc-4cd9-bf59-422330f1567b.jpg
-      descr: 与其临渊羡鱼，不如退而结网
+    - name: 前端网站合集
+      link: http://www.wwp666.cn/#/
+      avatar: http://wry.wwp666.cn/1673789101589.jpeg
+      descr: 快速传送门~
 
 - class_name: 网站
   class_desc: 值得推荐的网站
   link_list:
-    - name: Youtube
-      link: https://www.youtube.com/
-      avatar: https://i.loli.net/2020/05/14/9ZkGg8v3azHJfM1.png
-      descr: 視頻網站
-    - name: Weibo
-      link: https://www.weibo.com/
-      avatar: https://i.loli.net/2020/05/14/TLJBum386vcnI1P.png
-      descr: 中國最大社交分享平台
-    - name: Twitter
-      link: https://twitter.com/
-      avatar: https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png
-      descr: 社交分享平台
+    - name: 免费图片外链工具
+      link: https://www.imgurl.org/
+      # avatar: https://i.loli.net/2020/05/14/9ZkGg8v3azHJfM1.png
+      descr: 图片格式转换器（http格式）
+    - name: 谷歌翻译
+      link: https://translate.google.cn/?sl=auto&tl=zh-CN&op=docs
+      # avatar: https://i.loli.net/2020/05/14/TLJBum386vcnI1P.png
+      descr: 免费翻译文档
+    - name: 文库下载助手
+      link: https://imwcr.cn/api/GetDocumentText/
+      # avatar: https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png
+      descr: 
+    - name: 可画
+      link: https://www.canva.cn/
+      avatar: https://static.canva.cn/web/images/e1787d84651689b6f20de2ebd8d86baf.svg
+      descr: 设计海报等绘画
+    - name: PPT模板大全
+      link: https://www.ypppt.com/
+      # avatar: https://static.canva.cn/web/images/e1787d84651689b6f20de2ebd8d86baf.svg
+      descr: 免费海量ppt
+    # - name: 可画
+    #   link: https://www.canva.cn/
+    #   avatar: https://static.canva.cn/web/images/e1787d84651689b6f20de2ebd8d86baf.svg
+    #   descr: 设计海报等绘画https://www.ypppt.com/
