--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -669,7 +669,7 @@ aside:
       enable: true
       icon: fab fa-github
       text: Follow Me
-      link: https://github.com/xxxxxx
+      link: https://github.com/Crinaqiao
   card_announcement:
     enable: true
     content: This is my Blog
