--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -3,7 +3,11 @@
   link_list:
     - name: 前端网站合集
       link: http://www.wwp666.cn/#/
-      avatar: http://wry.wwp666.cn/1673789101589.jpeg
+      avatar: http://wry.wwp666.cn/1673789101589.jpeg 
+      descr: 快速传送门~
+    - name: 该博客主题
+      link: https://butterfly.js.org/
+      avatar: http://wry.wwp666.cn/1673789101589.jpeg 
       descr: 快速传送门~
 
 - class_name: 网站
