添加了工具--主题博客网址

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -7,7 +7,7 @@
       descr: 快速传送门~
     - name: 该博客主题
       link: https://butterfly.js.org/
-      avatar: http://wry.wwp666.cn/1673789101589.jpeg 
+      avatar: 
       descr: 快速传送门~
 
 - class_name: 网站
