--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -42,5 +42,5 @@
       descr: 免费海量ppt
     - name: 免费论文查重
       link: https://www.freecheck.cn/?ref=daily
-      link: https://www.paperword.com/passport/login
+      # link: https://www.paperword.com/passport/login
       descr: 每天免费查一次
