--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -40,7 +40,10 @@
       link: https://www.ypppt.com/
       # avatar: https://static.canva.cn/web/images/e1787d84651689b6f20de2ebd8d86baf.svg
       descr: 免费海量ppt
-    - name: 免费论文查重
+    - name: 论文查重1
       link: https://www.freecheck.cn/?ref=daily
       # link: https://www.paperword.com/passport/login
+      descr: 每天免费查一次
+    - name: 论文查重2
+      link: https://www.paperword.com/passport/login
       descr: 每天免费查一次
