--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -9,6 +9,10 @@
       link: https://butterfly.js.org/
       avatar: 
       descr: 快速传送门~
+    - name: 评论存储处
+      link: https://console.leancloud.cn/apps
+      avatar: 
+      descr: 快速传送门~
     - name: vercel
       link: https://vercel.com/
       avatar: 
